--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
-
 ---
 version: 2.1
 
@@ -6,11 +5,13 @@ defaults: &defaults
   docker:
     - image: greenpeaceinternational/p4-builder:latest
 
+orbs:
+  slack: circleci/slack@3.4.2
 job_environments:
   common_environment: &common_environment
     APP_HOSTPATH: test-rhea
     CONTAINER_PREFIX: planet4-test-rhea
-    WP_DB_NAME_PREFIX: planet4-test-rhea_wordpress
+    WP_DB_NAME_PREFIX: planet4-testrhea_wordpress
   develop_environment: &develop_environment
     APP_ENVIRONMENT: development
     APP_HOSTNAME: k8s.p4.greenpeace.org
@@ -20,8 +21,9 @@ job_environments:
     HELM_NAMESPACE: develop
     HELM_RELEASE: planet4-test-rhea
     NEWRELIC_APPNAME: P4 test-rhea Development
-    WP_DB_NAME: planet4-test-rhea_wordpress_develop
+    WP_DB_NAME: planet4-testrhea_wordpress_develop
     WP_STATELESS_BUCKET: planet4-test-rhea-stateless-develop
+
 job_definitions:
   visualtests_reference_steps: &visualtests_reference_steps
     docker:
